@@ -1,7 +1,0 @@
-{
-	"Omegasis.Revitalize.Objects.Crafting.CraftingStations.Anvil":
-	{
-		"displayName":"Anvil",
-		"description":"An anvil that can be used for crafting different machines and other metalic objects."
-	},
-}
