@@ -100,7 +100,7 @@ namespace Omegasis.Revitalize.Framework.Content
             //Once all objects have been initialized, then we can add references to them for recipes and initialize all of the crafting recipes for the mod.
             this.craftingManager.initializeRecipeBooks();
 
-            //AdvancedGeodeCrusher.GenerateOutputJsonFiles();
+            AdvancedGeodeCrusher.GenerateOutputJsonFiles();
             //MiningDrill.GenerateOutputJsonFiles();
 
             this.dumpAllObjectIdsToJsonFile();
